--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,11 @@ a {
 }
 
 /****FONTS****/
-h1, h2, p, a, li {
+h1 {
+  font-family: "Shrikhand";
+}
+
+h2, p, a, li {
   font-family: "Roboto";
 }
 
@@ -171,8 +175,94 @@ footer {
   display: flex;
   flex-direction: column;
 }
-footer img {
-  color: white;
+
+/****RESTAURANTS****/
+.header__restaurant {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+.header__restaurant a {
+  height: fit-content;
+  position: absolute;
+  top: 21px;
+  left: 7%;
+}
+.header__restaurant a i {
+  font-size: large;
+}
+
+.main__restaurant {
+  position: relative;
+  height: fit-content;
+}
+
+.img__landing {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 15%;
+}
+
+.menu__restaurant {
+  position: absolute;
+  top: 74%;
+  width: 100%;
+  border-radius: 2em 2em 0 0;
+  background-color: white;
+}
+.menu__restaurant h1 {
+  padding-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.menu__restaurant h1:not(i) {
+  font-size: 21px;
+}
+.menu__restaurant h2 {
+  font-size: 14px;
+}
+
+.btn__dishe {
+  border-radius: 5px;
+  border: none;
+  width: 320px;
+  height: 60px;
+  box-shadow: 0px 10px 15px -5px grey;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+.btn__dishe :hover + .checked {
+  transform: translateX(-50px);
+}
+
+.text {
+  width: 100%;
+}
+.text h3 {
+  font-weight: bold;
+  width: fit-content;
+  font-size: 14px;
+}
+.text p {
+  display: flex;
+  justify-content: space-between;
+}
+
+.checked {
+  width: 50px;
+  height: 100%;
+  background-color: #99E2D0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: -50px;
+  transform: translateX(0);
+  transition: transform 400ms;
 }
 
 /*# sourceMappingURL=style.css.map */
