--- a/css/layout.scss
+++ b/css/layout.scss
@@ -23,7 +23,7 @@ section{
 
 /****FOOTER****/
 
-footer{
+.footer__index{
     background-color: map-get($map: $colors, $key: color-five);
     @include flexcolumn;
 }
