--- a/css/style.css
+++ b/css/style.css
@@ -170,10 +170,24 @@ section {
 }
 
 /****FOOTER****/
-.footer__index {
+footer {
   background-color: rgb(50, 60, 55);
   display: flex;
   flex-direction: column;
+}
+
+.footer__pages {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+}
+.footer__pages img {
+  width: 90px;
+  height: 20px;
+}
+.footer__pages a {
+  color: white;
+  font-size: 13px;
 }
 
 /****RESTAURANTS****/
@@ -243,7 +257,13 @@ section {
   padding-right: 0;
   background-color: white;
 }
-.btn__dishe :hover + i::before {
+.btn__dishe:hover .card__animation {
+  transform: translateX(-50px);
+}
+.btn__dishe:hover .card__animation i {
+  transform: rotate(0);
+}
+.btn__dishe:hover .text p span {
   transform: translateX(-50px);
 }
 
@@ -259,21 +279,26 @@ section {
   display: flex;
   justify-content: space-between;
 }
+.text span {
+  transform: translateX(0);
+  transition: transform 400ms;
+}
 
-.btn__dishe i::before {
-  width: 54px;
-  height: 62px;
+.card__animation {
+  width: 50px;
+  height: 60px;
   background-color: #99E2D0;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: -54px;
   transform: translateX(0);
   transition: transform 400ms;
+  margin-right: -50px;
 }
-.btn__dishe i::before i {
-  transform: rotate(-90deg);
-  transition: transform 400ms ease-in-out;
+.card__animation i {
+  color: white;
+  transform: rotate(-180deg);
+  transition: transform 600ms 100ms ease-out;
 }
 
 /*# sourceMappingURL=style.css.map */
