--- a/css/utils.scss
+++ b/css/utils.scss
@@ -6,7 +6,7 @@
 
 /****COLORS****/
 
-$colors:(color-one:#9356DC, color-two:#FF79DA,color-three:#99E2D0,color-four:rgb(243, 240, 239),color-five:rgb(50, 60, 55));
+$colors:(color-one:#9356DC, color-two:#FF79DA,color-three:#99E2D0,color-four:#f6f6f6,color-five:rgb(50, 60, 55));
 
 
 
