--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,8 @@ a {
 }
 .header {
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   flex-direction: column;
@@ -139,8 +141,10 @@ a {
   padding: 1%;
 }
 .card img {
-  object-fit: cover;
-  object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   width: 100%;
   height: 180px;
   border-radius: 15px 15px 0 0;
@@ -164,7 +168,7 @@ a {
   position: absolute;
   opacity: 0;
   transition-duration: 0.5s;
-  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  background: -webkit-gradient(linear, left top, left bottom, from #9356DC, to #FF79DA);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -213,6 +217,8 @@ footer a {
   position: relative;
 }
 .header__restaurant a {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   position: absolute;
   top: 21px;
@@ -227,12 +233,16 @@ footer a {
 }
 
 .main__restaurant {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
 }
 
 .img__landing {
-  object-fit: cover;
-  object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
   width: 100%;
   height: 15%;
 }
@@ -291,6 +301,8 @@ footer a {
 }
 .text h3 {
   font-weight: bold;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   font-size: 14px;
 }
@@ -314,6 +326,4 @@ footer a {
   color: white;
   transform: rotate(-180deg);
   transition: transform 600ms 100ms ease-out;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=main.css.map */
