--- a/css/pages.scss
+++ b/css/pages.scss
@@ -26,7 +26,6 @@
 }
 
 .main__restaurant{
-    position: relative;
     height: fit-content;
 }
 
@@ -38,11 +37,11 @@
     
 }
 .menu__restaurant{
-    position: absolute;
-    top: 74%;
+    position: relative;
+    margin-top: -5rem;
     width: 100%;
     border-radius: 2em 2em 0 0;
-    background-color: white;
+    background-color: map-get($map: $colors, $key: color-four);
 
     h1{
         padding-top: 15px;
@@ -62,8 +61,8 @@
 .btn__dishe{
         border-radius: 5px;
         border: none;
-        width: 320px;
-        height: 60px;
+        width: 10rem;
+        height: 4rem;
         box-shadow: 0px 10px 15px -5px grey;
         overflow: hidden;
         display: flex;
@@ -71,6 +70,10 @@
         cursor: pointer;
         padding-right: 0;
         background-color: white;
+
+        span{
+            transform: translateX(0);
+            transition: transform 400ms;}
 
         &:hover .card__animation{
             transform: translateX(-50px);
@@ -88,28 +91,26 @@
 
 .text{
     width: 100%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
     h3{
         font-weight: bold;
         width: fit-content;
         font-size: 14px;
-
     }
 
     p{
         display: flex;
         justify-content: space-between;
     }
-
-    span{
-        transform: translateX(0);
-        transition: transform 400ms;}
 }
 
 
 
 .card__animation{
     width: 50px;
-    height: 60px;
+    height: 4rem;
     background-color: map-get($map: $colors, $key: color-three);
     @include flexcenter;
     transform: translateX(0);
