--- a/css/style.css
+++ b/css/style.css
@@ -154,19 +154,44 @@ a {
 /****COEUR****/
 .heart__checkbox {
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .heart--empty {
   position: absolute;
+  width: 4em;
+  height: 4em;
 }
 
 .heart--fill {
   position: absolute;
+  width: 4em;
+  height: 4em;
   opacity: 0;
   transition-duration: 0.5s;
   background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+input {
+  position: absolute;
+  width: 4em;
+  height: 4em;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 3;
+}
+
+input:checked ~ .fa-regular {
+  transition-duration: 0.5s;
+  opacity: 0;
+}
+
+input:checked ~ .fas {
+  transition-duration: 0.5s;
+  opacity: 1;
 }
 
 /****FONTS****/
