loading spinner done

--- a/css/components.scss
+++ b/css/components.scss
@@ -135,3 +135,72 @@ input:checked ~ .fa-regular {
     transition-duration: 0.5s;
     opacity: 1;
   }
+
+.loadingSpinner{
+    position: fixed;
+    @include flexcenter;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: map-get($map: $colors, $key: color-four);
+    animation-name: loader;
+    animation-duration: .5s;
+    animation-delay: 2.5s;
+    animation-fill-mode: both;
+
+    @keyframes loader {
+        100%{
+            opacity: 0;
+        }
+    }
+}
+
+
+
+  .lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid map-get($map: $colors, $key: color-one);
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+  @keyframes lds-ripple {
+    0% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    4.9% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    5% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      width: 72px;
+      height: 72px;
+      opacity: 0;
+    }
+  }
+  
