--- a/css/components.scss
+++ b/css/components.scss
@@ -1,25 +1,4 @@
-.header{
-    width:100%;
-    height: fit-content;
-    @include flexcolumn;
 
-    figure{
-        width: 100%;
-        height: 60px;
-        @include flexcenter;
-        z-index: 10;
-        box-shadow: 0 0 10px 0 gray;
-    }
-
-    &__location{
-        width: 100%;
-        height: 60px;
-        background-color: map-get($map: $colors, $key: color-four);
-        @include flexcenter;
-        z-index: 5;
-
-    }    
-}
 
 .btn{
     width: 250px;
@@ -87,8 +66,6 @@
         right: 7%;
     }
 
-    
-
 }
 
 
@@ -96,20 +73,22 @@
 
 .heart__checkbox{
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: 30px;
+    height: 30px;
 }
 
 .heart--empty{
     position: absolute;
-    width: 4em;
-    height: 4em;
+    width: 30px;
+    height: 30px;
+    font-size: 30px;
 }
 
 .heart--fill{
     position: absolute;
-    width: 4em;
-    height: 4em;
+    width: 30px;
+    height: 30px;
+    font-size: 30px;
     opacity: 0;
     transition-duration: 0.5s;
     background: -webkit-gradient(linear, left top, left bottom, from(map-get($map: $colors, $key: color-one)), to(map-get($map: $colors, $key: color-two)));
@@ -119,11 +98,11 @@
 
 input {
     position: absolute;
-    width: 4em;
-    height: 4em;
+    width: 30px;
+    height: 30px;
     opacity: 0;
     cursor: pointer;
-    z-index: 3;
+    z-index: 10;
 }
 
 input:checked ~ .fa-regular {
@@ -136,12 +115,16 @@ input:checked ~ .fa-regular {
     opacity: 1;
   }
 
+
+  /****LOADING SPINNER****/
+
+  
 .loadingSpinner{
     position: fixed;
     @include flexcenter;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 20;
     background-color: map-get($map: $colors, $key: color-four);
     animation-name: loader;
     animation-duration: .5s;
@@ -151,10 +134,10 @@ input:checked ~ .fa-regular {
     @keyframes loader {
         100%{
             opacity: 0;
+            z-index:-10;
         }
     }
 }
-
 
 
   .lds-ripple {
@@ -204,3 +187,74 @@ input:checked ~ .fa-regular {
     }
   }
   
+
+  /****BOUTON DES PLATS****/
+
+  .btn__dishe{
+    border-radius: 5px;
+    border: none;
+    width: 10rem;
+    height: 4rem;
+    box-shadow: 0px 10px 15px -5px grey;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    padding-right: 0;
+    background-color: white;
+
+    span{
+        transform: translateX(0);
+        transition: transform 400ms;
+    }
+
+    &:hover .card__animation{
+        transform: translateX(-50px);
+       
+    }
+
+    &:hover .card__animation i{
+        transform: rotate(0);
+       
+    }
+
+    &:hover .text p span{
+        transform: translateX(-50px);
+    }
+
+}
+
+.text{
+width: 100%;
+white-space: nowrap;
+text-overflow: ellipsis;
+overflow: hidden;
+h3{
+    font-weight: bold;
+    width: fit-content;
+    font-size: 14px;
+}
+
+p{
+    display: flex;
+    justify-content: space-between;
+}
+}
+
+
+
+.card__animation{
+width: 50px;
+height: 4rem;
+background-color: map-get($map: $colors, $key: color-three);
+@include flexcenter;
+transform: translateX(0);
+transition: transform 400ms; 
+margin-right: -50px;
+
+i{
+    color: white;
+    transform: rotate(-180deg);
+    transition: transform 600ms 100ms ease-out;
+}
+}
