--- a/css/main.css
+++ b/css/main.css
@@ -158,21 +158,157 @@ a {
 /****COEUR****/
 .heart__checkbox {
   position: relative;
+  width: 10%;
+  height: 100%;
 }
 
 .heart--empty {
   position: absolute;
+  width: 4em;
+  height: 4em;
 }
 
 .heart--fill {
   position: absolute;
+  width: 4em;
+  height: 4em;
   opacity: 0;
   transition-duration: 0.5s;
-  background: -webkit-gradient(linear, left top, left bottom, from #9356DC, to #FF79DA);
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
+input {
+  position: absolute;
+  width: 4em;
+  height: 4em;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 3;
+}
+
+input:checked ~ .fa-regular {
+  transition-duration: 0.5s;
+  opacity: 0;
+}
+
+input:checked ~ .fas {
+  transition-duration: 0.5s;
+  opacity: 1;
+}
+
+.loadingSpinner {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: #f6f6f6;
+  -webkit-animation-name: loader;
+          animation-name: loader;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+@-webkit-keyframes loader {
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes loader {
+  100% {
+    opacity: 0;
+  }
+}
+
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #9356DC;
+  opacity: 1;
+  border-radius: 50%;
+  -webkit-animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+          animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.lds-ripple div:nth-child(2) {
+  -webkit-animation-delay: -0.5s;
+          animation-delay: -0.5s;
+}
+
+@-webkit-keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
+
+@keyframes lds-ripple {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
+}
 /****FONTS****/
 h1 {
   font-family: "Shrikhand";
