--- a/css/components.scss
+++ b/css/components.scss
@@ -190,11 +190,11 @@ input:checked ~ .fa-regular {
 
   /****BOUTON DES PLATS****/
 
-  .btn__dishe{
+  .dishe__btn{
     border-radius: 5px;
     border: none;
-    width: 10rem;
-    height: 4rem;
+    width: 250px;
+    height: 50px;
     box-shadow: 0px 10px 15px -5px grey;
     overflow: hidden;
     display: flex;
@@ -202,50 +202,62 @@ input:checked ~ .fa-regular {
     cursor: pointer;
     padding-right: 0;
     background-color: white;
+    transition: width 400ms ease-in-out;
 
     span{
+        display: block;
+        width: 50px;
+        height: 50px;
+        padding-right: 10px;
         transform: translateX(0);
         transition: transform 400ms;
+        @include flexcenter;
     }
 
-    &:hover .card__animation{
+    &:hover{
+        width: 200px;
+    }
+    &:hover .dishe__animation{
         transform: translateX(-50px);
        
     }
 
-    &:hover .card__animation i{
+    &:hover .dishe__animation i{
         transform: rotate(0);
        
     }
 
-    &:hover .text p span{
+    &:hover .dishe__price{
         transform: translateX(-50px);
     }
 
 }
 
-.text{
-width: 100%;
-white-space: nowrap;
-text-overflow: ellipsis;
-overflow: hidden;
-h3{
+.dishe__text >* {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-width: 100%;
+
+    h3{
+    @include textEllipsis;
     font-weight: bold;
     width: fit-content;
     font-size: 14px;
 }
 
-p{
+    p{
+    @include textEllipsis;
     display: flex;
     justify-content: space-between;
+    }
 }
-}
 
 
 
-.card__animation{
-width: 50px;
-height: 4rem;
+.dishe__animation{
+width: 52px;
+height: 60px;
 background-color: map-get($map: $colors, $key: color-three);
 @include flexcenter;
 transform: translateX(0);
