--- a/css/components.scss
+++ b/css/components.scss
@@ -1,5 +1,3 @@
-
-
 .btn{
     width: 250px;
     height: 50px;
@@ -19,6 +17,12 @@
         color: white;
         background-color: map-get($map: $colors, $key: color-one); 
         @include flexcenter;
+    }
+
+    &__link{
+        width: 250px;
+        height: 50px;
+        color: black;
     }
 
     
@@ -190,6 +194,19 @@ input:checked ~ .fa-regular {
 
   /****BOUTON DES PLATS****/
 
+  .dishe__price    {
+    width: 50px;
+    height: 50px;
+    padding-right: 10px;
+    transition: width 400ms;
+    position: relative;
+
+    span{
+        position: sticky;
+        left: 10px;
+        bottom: 10px;
+    }
+}
   .dishe__btn{
     border-radius: 5px;
     border: none;
@@ -198,25 +215,14 @@ input:checked ~ .fa-regular {
     box-shadow: 0px 10px 15px -5px grey;
     overflow: hidden;
     display: flex;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     cursor: pointer;
     padding-right: 0;
     background-color: white;
     transition: width 400ms ease-in-out;
 
-    span{
-        display: block;
-        width: 50px;
-        height: 50px;
-        padding-right: 10px;
-        transform: translateX(0);
-        transition: transform 400ms;
-        @include flexcenter;
-    }
-
-    &:hover{
-        width: 200px;
-    }
     &:hover .dishe__animation{
         transform: translateX(-50px);
        
@@ -228,16 +234,18 @@ input:checked ~ .fa-regular {
     }
 
     &:hover .dishe__price{
-        transform: translateX(-50px);
+        width: 100px;
     }
 
 }
 
-.dishe__text >* {
+.dishe__text{
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    /*max-width: 100%;*/
 
     h3{
     @include textEllipsis;
@@ -256,7 +264,7 @@ input:checked ~ .fa-regular {
 
 
 .dishe__animation{
-width: 52px;
+width: 50px;
 height: 60px;
 background-color: map-get($map: $colors, $key: color-three);
 @include flexcenter;
