animation menu  complete

--- a/css/components.scss
+++ b/css/components.scss
@@ -194,87 +194,71 @@ input:checked ~ .fa-regular {
 
   /****BOUTON DES PLATS****/
 
-  .dishe__price    {
-    width: 50px;
+.dishe{
+    width: 350px;
     height: 50px;
-    padding-right: 10px;
-    transition: width 400ms;
-    position: relative;
-
-    span{
-        position: sticky;
-        left: 10px;
-        bottom: 10px;
-    }
-}
-  .dishe__btn{
-    border-radius: 5px;
-    border: none;
-    width: 250px;
-    height: 50px;
-    box-shadow: 0px 10px 15px -5px grey;
-    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    padding-right: 0;
-    background-color: white;
-    transition: width 400ms ease-in-out;
+    overflow: hidden;
+    max-width: 100%;
 
-    &:hover .dishe__animation{
-        transform: translateX(-50px);
-       
+    &__description {
+        width: 100%;
+        display: flex;
+        max-width: 100%;
+        overflow: hidden;
     }
 
-    &:hover .dishe__animation i{
-        transform: rotate(0);
-       
-    }
-
-    &:hover .dishe__price{
+    &__icone {
         width: 100px;
+        background: map-get($map: $colors, $key: color-three);
+        @include flexcenter;
+        margin-right: -100px;
+        transition-duration: 0.5s;
+        transition-timing-function: ease;
     }
 
+    &:hover .dishe__icone {
+        margin-right: 0;
+        transition-duration: 0.5s;
+        transition-timing-function: ease;
+    }
+
+    &:hover .dishe__icone i{
+        transform: rotate(0);       
+    }
 }
 
-.dishe__text{
+.dishe__text {
+    width: 100%;
+    margin-left: 10px;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.dishe__price {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
+    max-width: 100%;
+}
+
+.dishe__icone > i {
+    color: map-get($map: $colors, $key: color-three);
+    padding: 5px;
+    border-radius: 50%;
+    background: white;
+    transform: rotate(-180deg);
+    transition: transform 0.5s;
+}
+
+.dishe__text > *{
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    display: flex;
-    justify-content: space-between;
-    /*max-width: 100%;*/
+    max-width: 100%;
+  }
 
-    h3{
-    @include textEllipsis;
-    font-weight: bold;
-    width: fit-content;
-    font-size: 14px;
-}
-
-    p{
-    @include textEllipsis;
-    display: flex;
-    justify-content: space-between;
-    }
-}
-
-
-
-.dishe__animation{
-width: 50px;
-height: 60px;
-background-color: map-get($map: $colors, $key: color-three);
-@include flexcenter;
-transform: translateX(0);
-transition: transform 400ms; 
-margin-right: -50px;
-
-i{
-    color: white;
-    transform: rotate(-180deg);
-    transition: transform 600ms 100ms ease-out;
-}
-}
