--- a/css/layout.scss
+++ b/css/layout.scss
@@ -60,7 +60,7 @@ section{
     background: -webkit-gradient(linear, left top, left bottom, from(white), to(map-get($map:$colors, $key: color-four)));
 
     &__link{
-        margin: auto;
+        margin: 10px auto;
         width: 220px;
         height: 50px;
         -webkit-text-fill-color: white;
@@ -75,17 +75,27 @@ section{
 footer{
     background-color: map-get($map: $colors, $key: color-five);
     @include flexcolumn;
-    height: 7em;
+    height: 150px;
+    padding-left: 5%;
 
     img{
         width: 90px;
-        height: 20px;   
+        height: 40px; 
+        padding-top: 5px;
+        padding-bottom: 5px;  
     }
 
     a{
         color: white;
         font-size: 13px;
+        padding-top: 5px;
+
+        i{
+            margin-right: 10px;
+        }
     }
+
+
 }
 
 
